# fmrc-report-document-ocr

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/: main.py  requirements.txt
backend/api/: main.py  routers.py
backend/api/v1/: upload.py
backend/common/: __init__.py  config.py  logging.py  mail.py
backend/common/utils/: __init__.py  uuid.py
backend/common/utils/pdf/: check.py
backend/utils/v1/: __init__.py  markdown.py  text.py
backend/utils/v1/prompt/: pediatric_prompt.py
backend/utils/v1/report/: document.py
backend/utils/v1/report/google/: services.py
scripts/: config.py  convert_markdown.py  doc_content_1iEg_wTbRorPXU6oJf7ATV6kv20yNFFI3wwrldf3C6fE.json  extract_structured_data.py  extract_structured_data_with_llm.py  full_extract_using_llm.py  google_docs_creation.py  llm_response_store.py  pdf_reader.py  prompts.py  remove_static_pdf.py  remove_upload_pdf.py  report.py
ui/: README.md  index.html  script.js  styles.css
